Game logic (#1)
* Add dependencies

* Add integrationTestParent

* Add pusher for the live game updates

* Add entities

* Add repositories and test for player repository

* Add toDTO functions

* Makes a user join an existing game when a user is waiting

* Add game move

* Refactor game update dto

* Add test for the gameService

* Refactor liveUpdateService

* Add indexes

* Add query to get all moves paginated

* Refactor

* Refactor

* Add test for the move service

* Add more tests and controllers

* Add validation and test for the controller

* Add test for the player controller

* Add tests

* Fix test

* Add cache

* Add test

* Update README

* Reformat the code

* Add endpoint to get games by status

* Reformat code

* Add test